<resources>
    <string name="app_name">Otic</string>

    <string name="toast_connected">Connected to %s</string>
    <string name="toast_disconnected">Disconnected from %s</string>

    <string name="status_unknown">Please wait</string>
    <string name="status_connected">Connected\nHold the volume keys to talk</string>
    <string name="status_searching">Looking for a device to connect to</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="choose_player_type">Choose player Type</string>
    <string name="other_player_name">Other Name</string>
    <string name="choose_board_size">Choose Board Size</string>
    <string name="play">Play</string>
    <string name="android">Android</string>
    <string name="friend">Friend</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="game_settings">Game Settings</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="choose_prefere_colors">Choose Theme</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="default_device_name">Default Device Name</string>
    <string name="default_your_name">Default Your Name</string>
    <string name="default_board_size">Default Board Size</string>
    <string name="best_scores">Best Scores</string>
    <string name="about_game">About Game</string>
    <string name="how_to_play">How To Play ?</string>
    <string name="your_name">Your Name</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="find_players">Find Players</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
    <string name="game_finished">Game Finished</string>
    <string name="win">Win</string>
    <string name="the_game_draw">The Game Draw</string>
    <string name="your_name_required">Your name required</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="stop_search">Stop Search</string>
    <string name="your_device_does_not_support_bluetooth">Oops! Your device does not support Bluetooth</string>
    <string name="bluetooth_enabled">Bluetooth Enabled</string>
    <string name="scanning_for_peers">Scanning for peers</string>
    <string name="bluetooth_is_not_enabled">Bluetooth is not enabled.</string>
    <string name="your_device_is_now_discoverable_for">Your device is now discoverable for</string>
    <string name="seconds">seconds</string>
    <string name="Fail_to_enable_discoverable_mode">Fail to enable discoverable mode.</string>
    <string name="discovering_peers">Discovering peers</string>
    <string name="discovery_failed_to_start">Discovery failed to start.</string>
    <string name="connection_has_been_accepted">Connection has been accepted.</string>
    <string name="find_bluetooth_players">Find Bluetooth Players</string>
    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="board_size_2">Board Size 2</string>
    <string name="board_size_3">Board Size 3</string>
    <string name="board_size_4">Board Size 4</string>
    <string name="board_size_5">Board Size 5</string>
    <string name="player_name">Player Name</string>
    <string name="no_of_wins">No of Wins</string>
    <string name="settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_game">Exit Game</string>
    <string name="game_info">Game Info</string>
    <string name="rate_otic">Rate Otic</string>
    <string name="please_rate_otic">Please, Rate Otic game at playStore</string>
    <string name="rate">Rate</string>
    <string name="share_by">Share by</string>
    <string name="let_me_share_you">Let me share you this game</string>
    <string name="share_otic">Share Otic</string>
    <string name="developed_by">Developed By</string>
    <string name="email">amr.alsaidy@gmail.com</string>
    <string name="version">Version</string>
    <string name="change_your_name">Change Your Name</string>
    <string name="update">Update</string>
    <string name="change_device_name">Change Device Name</string>
    <string name="click_back_again">Click Back again to exit</string>
    <string name="clear_all_data">Clear all data?</string>
</resources>
