<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar_id"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/md_grey_700" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/clear_data_iv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_clear_data" />

        <com.asb.otic.ui.custom.CTextView
            android:id="@+id/find_bluetooth_ctv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/best_scores"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/md_black_1000" />

        <ImageView
            android:id="@+id/back_iv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_back" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/md_black_1000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.asb.otic.ui.custom.CTextView
                        android:id="@+id/board_size_2_tv_id"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:background="@color/md_red_500"
                        android:text="@string/board_size_2"
                        android:textAlignment="center"
                        android:textColor="@color/md_white_1000"
                        android:textSize="18sp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.asb.otic.ui.custom.CTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:background="@color/md_orange_700"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/player_name"
                            android:textAlignment="center"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp" />

                        <com.asb.otic.ui.custom.CTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:background="@color/md_orange_700"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/no_of_wins"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/size_two_rv_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/md_grey_100"
                    android:padding="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/md_black_1000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.asb.otic.ui.custom.CTextView
                        android:id="@+id/board_size_3_tv_id"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:background="@color/md_red_500"
                        android:padding="3dp"
                        android:text="@string/board_size_3"
                        android:textAlignment="center"
                        android:textColor="@color/md_white_1000"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.asb.otic.ui.custom.CTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:background="@color/md_orange_700"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/player_name"
                            android:textAlignment="center"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp" />

                        <com.asb.otic.ui.custom.CTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:background="@color/md_orange_700"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/no_of_wins"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/size_three_rv_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/md_grey_100"
                    android:padding="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/md_black_1000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.asb.otic.ui.custom.CTextView
                        android:id="@+id/board_size_4_tv_id"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:background="@color/md_red_500"
                        android:padding="3dp"
                        android:text="@string/board_size_4"
                        android:textAlignment="center"
                        android:textColor="@color/md_white_1000"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.asb.otic.ui.custom.CTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:background="@color/md_orange_700"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/player_name"
                            android:textAlignment="center"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp" />

                        <com.asb.otic.ui.custom.CTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:background="@color/md_orange_700"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/no_of_wins"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/size_four_rv_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/md_grey_100"
                    android:padding="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/md_black_1000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.asb.otic.ui.custom.CTextView
                        android:id="@+id/board_size_5_tv_id"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:background="@color/md_red_500"
                        android:padding="3dp"
                        android:text="@string/board_size_5"
                        android:textAlignment="center"
                        android:textColor="@color/md_white_1000"
                        android:textSize="18sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.asb.otic.ui.custom.CTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:background="@color/md_orange_700"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/player_name"
                            android:textAlignment="center"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp" />

                        <com.asb.otic.ui.custom.CTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:background="@color/md_orange_700"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/no_of_wins"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/size_five_rv_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/md_grey_100"
                    android:padding="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/md_black_1000" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</LinearLayout>